history gap fix

--- a/src/components/HistoryImage/style.module.css
+++ b/src/components/HistoryImage/style.module.css
@@ -6,8 +6,6 @@
     width: 100%;
     background-color: #2C2C2C;
     padding: 10px;
-    /* justify-content: center;
-    align-items: center; */
 }
 
 .img {
@@ -15,8 +13,7 @@
     height: 150px;
     width: 95%;
     background-color: #00000033;
-    border-radius: 1.1425355672836304px;
-    /* margin: 5px 0 5px 0; */
+    border-radius: 2px;
     object-fit: cover;
     aspect-ratio: 6/9;
 }
