--- a/src/pages/HistoryPage/style.module.css
+++ b/src/pages/HistoryPage/style.module.css
@@ -59,12 +59,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     padding-top: 20px;
-    gap: 4%;
+    gap: 30px;
     height: 70%;
     width: 85%;
-}
-
-.images>img {
-    height: 200px;
-    object-fit: contain;
 }
